--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,18 +3,19 @@
 
 # SVR
 
-@article{Xu2022,
-author = "Junshen Xu and Daniel Moyer and Borjan Gagoski and Juan Eugenio Iglesias and P. Ellen Grant and Polina Golland and Elfar Adalsteinsson",
-title = "{NeSVoR: Implicit Neural Representation for Slice-to-Volume Reconstruction in MRI}",
-year = "2022",
-month = "11",
-url = "https://www.techrxiv.org/articles/preprint/NeSVoR_Implicit_Neural_Representation_for_Slice-to-Volume_Reconstruction_in_MRI/21398868",
-doi = "10.36227/techrxiv.21398868.v1",
+@article{NATH2022139890,
+title = {Evaluation of thermodynamic consistency of kinetic parameters in cyclic enzyme-catalyzed reaction networks},
+journal = {Chemical Physics Letters},
+volume = {804},
+pages = {139890},
+year = {2022},
+issn = {0009-2614},
 selected={true},
-code = "https://github.com/daviddmc/NeSVoR",
-preview = "recon_60_ax.gif",
-abstract = {Reconstructing 3D MR volumes from multiple motion-corrupted stacks of 2D slices has shown promise in imaging of moving subjects, e.g., fetal MRI. However, existing slice-to-volume reconstruction methods are time-consuming, especially when a high-resolution volume is desired. Moreover, they are still vulnerable to severe subject motion and when image artifacts are present in acquired slices. In this work, we present NeSVoR, a resolution-agnostic slice-to-volume reconstruction method, which models the underlying volume as a continuous function of spatial coordinates with implicit neural representation. To improve robustness to subject motion and other image artifacts, we adopt a continuous and comprehensive slice acquisition model that takes into account rigid inter-slice motion, point spread function, and bias fields. NeSVoR also estimates pixel-wise and slice-wise variances of image noise and enables removal of outliers during reconstruction and visualization of uncertainty. Extensive experiments are performed on both simulated and in vivo data to evaluate the proposed method. Results show that NeSVoR achieves state-of-the-art reconstruction quality while providing two to ten-fold acceleration in reconstruction times over the state-of-the-art algorithms.},
-journal = {TechRxiv}
+doi = {https://doi.org/10.1016/j.cplett.2022.139890},
+url = {https://www.sciencedirect.com/science/article/pii/S000926142200553X},
+author = {Sarang S. Nath},
+keywords = {Cyclic reaction networks, Enzyme-catalyzed reactions, Kinetic analysis, Thermodynamic consistency, Kinetic parameters and rate constants, Empty reaction routes, Dihydrofolate reductase, Graph theory},
+abstract = {It is shown by analysis of a cyclic enzymatic network that the presence of zero net flux/current cycles impose strong thermodynamic constraints on the values of the kinetic parameters. Thermodynamic analysis is carried out for the four-node pyramidal reaction network involving the conversion of 7,8-­dihydrofolate (H2F) and NADPH in the presence of H+ to 5,6,7,8-­tetrahydrofolate (H4F) and NADP+ catalyzed by the universal enzyme dihydrofolate reductase (DHFR). The complete set of empty reaction routes in the DHFR pathway is identified, equations for the thermodynamic constraints imposed on the rate constants of the various elementary steps are written down, and the thermodynamic consistency of the experimentally determined rate constants is evaluated. The visual approach based on the theory of graphs can be employed to test the thermodynamic consistency of kinetic parameters of general cyclic enzyme-catalyzed reaction networks.}
 }
 
 @InProceedings{10.1007/978-3-031-16446-0_1,
