--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,32 @@ keywords = {Cyclic reaction networks, Enzyme-catalyzed reactions, Kinetic analys
 abstract = {It is shown by analysis of a cyclic enzymatic network that the presence of zero net flux/current cycles impose strong thermodynamic constraints on the values of the kinetic parameters. Thermodynamic analysis is carried out for the four-node pyramidal reaction network involving the conversion of 7,8-­dihydrofolate (H2F) and NADPH in the presence of H+ to 5,6,7,8-­tetrahydrofolate (H4F) and NADP+ catalyzed by the universal enzyme dihydrofolate reductase (DHFR). The complete set of empty reaction routes in the DHFR pathway is identified, equations for the thermodynamic constraints imposed on the rate constants of the various elementary steps are written down, and the thermodynamic consistency of the experimentally determined rate constants is evaluated. The visual approach based on the theory of graphs can be employed to test the thermodynamic consistency of kinetic parameters of general cyclic enzyme-catalyzed reaction networks.}
 }
 
+@Article{C3SC50729G,
+author ="Wang, Pengcheng and Querard, Jérôme and Maurin, Sylvie and Nath, Sarang S. and Le Saux, Thomas and Gautier, Arnaud and Jullien, Ludovic",
+title  ="Photochemical properties of Spinach and its use in selective imaging",
+journal  ="Chem. Sci.",
+year  ="2013",
+volume  ="4",
+issue  ="7",
+pages  ="2865-2873",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/C3SC50729G",
+url  ="http://dx.doi.org/10.1039/C3SC50729G",
+abstract  ="The progress in imaging instrumentation and probes has revolutionized the way biologists look at living systems. Current tools enable both observation and quantification of biomolecules{,} allowing the measurement of their complex spatial organization and the dynamic processes in which they are involved. Here{,} we report reversible photoconversion in the Spinach system{,} a recently described fluorescent probe for RNA imaging. Upon irradiation with blue light{,} the Spinach system undergoes photoconversion to a less fluorescent state and fully recovers its signal in the dark. Through thermodynamic titration{,} stopped-flow{,} and light-jump experiments{,} we propose a dynamic model that accounts for the photochemical behavior of the Spinach system. We exploit the dynamic fluorogen exchange and the unprecedented photoconversion properties in a non-covalent fluorescence turn-on system to significantly improve signal-to-background ratio during long-term microscopy imaging."}
+
+@article{doi:10.1021/jp809678n,
+author = {Nath, Sarang S. and Nath, Sunil},
+title = {Energy Transfer from Adenosine Triphosphate: Quantitative Analysis and Mechanistic Insights},
+journal = {The Journal of Physical Chemistry B},
+volume = {113},
+number = {5},
+pages = {1533-1537},
+year = {2009},
+doi = {10.1021/jp809678n},
+note ={PMID: 19143490},
+URL = {https://doi.org/10.1021/jp809678n},
+eprint = {https://doi.org/10.1021/jp809678n}}
+
 @InProceedings{10.1007/978-3-031-16446-0_1,
 author="Xu, Junshen
 and Moyer, Daniel
