--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,70 @@ keywords = {Cyclic reaction networks, Enzyme-catalyzed reactions, Kinetic analys
 abstract = {It is shown by analysis of a cyclic enzymatic network that the presence of zero net flux/current cycles impose strong thermodynamic constraints on the values of the kinetic parameters. Thermodynamic analysis is carried out for the four-node pyramidal reaction network involving the conversion of 7,8-­dihydrofolate (H2F) and NADPH in the presence of H+ to 5,6,7,8-­tetrahydrofolate (H4F) and NADP+ catalyzed by the universal enzyme dihydrofolate reductase (DHFR). The complete set of empty reaction routes in the DHFR pathway is identified, equations for the thermodynamic constraints imposed on the rate constants of the various elementary steps are written down, and the thermodynamic consistency of the experimentally determined rate constants is evaluated. The visual approach based on the theory of graphs can be employed to test the thermodynamic consistency of kinetic parameters of general cyclic enzyme-catalyzed reaction networks.}
 }
 
+@article{NATH2022118015,
+title = {Elucidating dynamics and mechanism of cyclic bioreaction networks using topologically-equivalent electrical circuits},
+journal = {Chemical Engineering Science},
+volume = {262},
+pages = {118015},
+year = {2022},
+issn = {0009-2509},
+doi = {https://doi.org/10.1016/j.ces.2022.118015},
+url = {https://www.sciencedirect.com/science/article/pii/S0009250922005991},
+author = {Sarang S. Nath and Lars K. Nielsen and John Villadsen},
+keywords = {Biochemical reaction networks, Bionetworks, Electrical analogs, Dihydrofolate reductase, Network dynamics, Molecular mechanism, Kinetic analysis, Maximum flux, Steady-state rate, Cycles and sub-cycles, Electrical circuits, Graph theory},
+abstract = {A novel methodology is established to convert a set of elementary chemical reactions into topologically-equivalent electrical circuits. The circuit analog is then simulated to elucidate the dynamics of complex cyclic bionetworks. The pyramidal reaction network catalyzed by the universal enzyme dihydrofolate reductase – which has important pharmacological and medical relevance in connection with cancer therapy – is used to illustrate the application of our model. The finite number of mechanisms, sub-cycles, or graphs constituting the cyclic network are analyzed, their contribution to the overall steady-state reaction rate determined, and the most probable mechanism is identified. The developed methodology is elegant, modular, and permits representation and visualization of network structure and topology at a glance. It can handle linear and nonlinear kinetics/rate laws, does not require simplifying assumptions such as use of the quasi-steady-state/Bodenstein approximation or the absence of nonlinear kinetic steps in the intermediates, and is suitable for coupling and integration with other flux-based reaction models.}
+}
+
+@article{NATH2022100374,
+title = {Modeling dynamics of chemical reaction networks using electrical analogs: Application to autocatalytic reactions},
+journal = {Chemical Engineering Journal Advances},
+volume = {12},
+pages = {100374},
+year = {2022},
+issn = {2666-8211},
+doi = {https://doi.org/10.1016/j.ceja.2022.100374},
+url = {https://www.sciencedirect.com/science/article/pii/S266682112200134X},
+author = {Sarang S. Nath and John Villadsen},
+keywords = {Autocatalysis, Network theory, Modeling and computer simulation, Electrical circuits, Chemical kinetics, Nonlinear dynamics, Molecular mechanism, Biological implications},
+abstract = {Modeling complex chemical reaction networks has inspired a considerable body of research and a variety of approaches to modeling nonlinear pathways are being developed. Here, a general methodology is formulated to convert an arbitrary reaction network into its equivalent electrical analog. The topological equivalence of the electrical analog is mathematically established for unimolecular reactions using Kirchhoff's laws. The modular approach is generalized to bimolecular and nonlinear autocatalytic reactions. It is then applied to simulate the dynamics of nonlinear autocatalytic networks without making simplifying assumptions, such as use of the quasi-steady state/Bodenstein approximation or the absence of nonlinear steps in the intermediates. This is among the few papers that quantify the dynamics of a nonlinear chemical reaction network by generating and simulating an electrical network analog. As a realistic biological application, the early phase of the spread of COVID-19 is modeled as an autocatalytic process and the predicted dynamics are in good agreement with experimental data. The rate-limiting step of viral transmission is identified, leading to novel mechanistic insights.}
+}
+
+@article{NATH2022133503,
+title = {Minimal model for oscillatory dynamics of a nonlinear chemical reaction network},
+journal = {Physica D: Nonlinear Phenomena},
+volume = {441},
+pages = {133503},
+year = {2022},
+issn = {0167-2789},
+doi = {https://doi.org/10.1016/j.physd.2022.133503},
+url = {https://www.sciencedirect.com/science/article/pii/S0167278922002111},
+author = {Sarang S. Nath},
+keywords = {Chemical reaction dynamics, Excitable systems, Stability analysis, Complexity and complex systems, Autocatalytic reactions, Hodgkin–Huxley equations of nerve conduction},
+abstract = {Since Bray’s pioneering discovery exactly 100 years ago of the first oscillating reaction, more than 25 families of nonlinear oscillating reaction networks have been identified. The B–Z reaction network has been expanded, and complex models considering a score of chemical reactions and species have been developed. Here we look at the inverse problem and ask how the complexity of the models can be reduced. We quantify the dynamics of a minimal model by linear stability techniques and direct integration of the set of ODEs, and show that essential oscillatory and excitability features are satisfactorily captured. Reasons for the success of the minimal model are explained. Extensions of the model to fundamental chemical and biological processes are discussed, and application of the chemical reaction network to mathematically model nerve conduction is illustrated.}
+}
+
+@article{doi:10.1021/acs.iecr.2c02906,
+author = {Nath, Sarang S.},
+title = {Thermodynamic Consistency and Kinetic Mechanism of a Complex Reaction Pathway by Analysis of Its Constituent Cyclic Networks},
+journal = {Industrial \& Engineering Chemistry Research},
+volume = {61},
+number = {46},
+pages = {17039-17043},
+year = {2022},
+doi = {10.1021/acs.iecr.2c02906},
+
+URL = { 
+        https://doi.org/10.1021/acs.iecr.2c02906
+    
+},
+eprint = { 
+        https://doi.org/10.1021/acs.iecr.2c02906
+    
+}
+,
+    abstract = { The complete set of thermodynamically consistent sub-cyclic routes that produce a net positive reaction flux in the dihydrofolate reductase (DHFR) network is identified by a novel approach based on the theory of graphs. The net positive flux cycles that yield the minimal set of linearly independent rate equations (“mechanisms”) are then selected. The steady-state flux (reaction rate) through these constituent sub-cycles is quantified, and the sub-cycle that generates the maximum flux is identified as the most probable mechanism of the pathway. This analysis is performed for both wild-type and mutant Escherichia coli DHFR systems. The graph-theoretical method of visualization of networks developed here should prove to be a useful tool for elucidating the kinetic mechanism complex cyclic reaction networks. }
+}
+
 @Article{C3SC50729G,
 author ="Wang, Pengcheng and Querard, Jérôme and Maurin, Sylvie and Nath, Sarang S. and Le Saux, Thomas and Gautier, Arnaud and Jullien, Ludovic",
 title  ="Photochemical properties of Spinach and its use in selective imaging",
