--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -104,9 +104,19 @@ number = {5},
 pages = {1533-1537},
 year = {2009},
 doi = {10.1021/jp809678n},
-note ={PMID: 19143490},
-URL = {https://doi.org/10.1021/jp809678n},
-eprint = {https://doi.org/10.1021/jp809678n}}
+    note ={PMID: 19143490},
+
+URL = { 
+        https://doi.org/10.1021/jp809678n
+    
+},
+eprint = { 
+        https://doi.org/10.1021/jp809678n
+    
+}
+,
+    abstract = { The ATP−ADP thermodynamic cycle is the fundamental mode of energy exchange in oxidative phosphorylation, photophosphorylation, muscle contraction, and intracellular transport by various molecular motors and is therefore of vital importance in biological energy transduction and storage. Following a recent suggestion in the pages of this journal (Ross, J. J. Phys. Chem. B 2006, 110, 6987−6990), we have carried out a simple quantitative analysis of a direct molecular mechanism of energy transfer from adenosine triphosphate (ATP). The simulation provides new insights into the mechanistic events following terminal phosphorus−oxygen bond cleavage during ATP hydrolysis. This approach also allows for the division of the energy-transfer process into elementary steps and for the prediction of the distribution of the standard-state Gibbs free energy of the overall ATP hydrolysis process among the various steps of substrate binding, bond cleavage, and product release in the enzymatic cycle, which had proved very difficult to specify previously. These predictions are consistent with available experimental data on ATP hydrolysis by protein biomolecular machines. The fundamental biological implications arising from our results are also discussed in detail. The aspects considered in this work enable us to look at the entire process of ATP synthesis/hydrolysis and energy transduction and storage in various biological molecular machines in a logically consistent and unified way. }
+}
 
 @InProceedings{10.1007/978-3-031-16446-0_1,
 author="Xu, Junshen
