--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@ pages = {139890},
 year = {2022},
 issn = {0009-2614},
 selected={true},
+preview = "Eval_thermo.jpg",
 doi = {https://doi.org/10.1016/j.cplett.2022.139890},
 url = {https://www.sciencedirect.com/science/article/pii/S000926142200553X},
 author = {Sarang S. Nath},
@@ -26,6 +27,7 @@ pages = {118015},
 year = {2022},
 issn = {0009-2509},
 selected={true},
+preview = "Eluc_dynamics.jpg",
 doi = {https://doi.org/10.1016/j.ces.2022.118015},
 url = {https://www.sciencedirect.com/science/article/pii/S0009250922005991},
 author = {Sarang S. Nath and Lars K. Nielsen and John Villadsen},
@@ -41,6 +43,7 @@ pages = {100374},
 year = {2022},
 issn = {2666-8211},
 selected={true},
+preview = "Mod_dynamics.jpg",
 doi = {https://doi.org/10.1016/j.ceja.2022.100374},
 url = {https://www.sciencedirect.com/science/article/pii/S266682112200134X},
 author = {Sarang S. Nath and John Villadsen},
@@ -55,6 +58,7 @@ volume = {441},
 pages = {133503},
 year = {2022},
 issn = {0167-2789},
+preview = "Mini_model.jpg",
 doi = {https://doi.org/10.1016/j.physd.2022.133503},
 url = {https://www.sciencedirect.com/science/article/pii/S0167278922002111},
 author = {Sarang S. Nath},
@@ -70,6 +74,7 @@ volume = {61},
 number = {46},
 pages = {17039-17043},
 year = {2022},
+preview = "Thermo_consistency.png",
 doi = {10.1021/acs.iecr.2c02906},
 
 URL = { 
@@ -94,6 +99,7 @@ issue  ="7",
 pages  ="2865-2873",
 publisher  ="The Royal Society of Chemistry",
 selected={true},
+preview = "Photo_prop.png",
 doi  ="10.1039/C3SC50729G",
 url  ="http://dx.doi.org/10.1039/C3SC50729G",
 abstract  ="The progress in imaging instrumentation and probes has revolutionized the way biologists look at living systems. Current tools enable both observation and quantification of biomolecules{,} allowing the measurement of their complex spatial organization and the dynamic processes in which they are involved. Here{,} we report reversible photoconversion in the Spinach system{,} a recently described fluorescent probe for RNA imaging. Upon irradiation with blue light{,} the Spinach system undergoes photoconversion to a less fluorescent state and fully recovers its signal in the dark. Through thermodynamic titration{,} stopped-flow{,} and light-jump experiments{,} we propose a dynamic model that accounts for the photochemical behavior of the Spinach system. We exploit the dynamic fluorogen exchange and the unprecedented photoconversion properties in a non-covalent fluorescence turn-on system to significantly improve signal-to-background ratio during long-term microscopy imaging."}
@@ -107,6 +113,7 @@ number = {5},
 pages = {1533-1537},
 year = {2009},
 selected={true},
+preview = "Energy_transf.png",
 doi = {10.1021/jp809678n},
     note ={PMID: 19143490},
 
